<resources>
    <string name="app_name">Always create user</string>
    <string name="xposed_desc">An Xposed Framework module that bypasses Android\'s user/profile creation limits</string>

    <string name="module_not_loaded">Module not loaded</string>
    <string name="will_not_save">Any changes you make will not be saved</string>

    <string name="category_general">General</string>
    <string name="enable_module_title">Enable Module</string>
    <string name="enable_module_summary">Master switch to enable/disable all module functions.</string>

    <string name="category_settings">Settings</string>
    <string name="hook_isCreationOverrideEnabled_title">Bypass isCreationOverrideEnabled</string>
    <string name="hook_isCreationOverrideEnabled_summary">Enable this to bypass user creation restrictions (Android 14+)</string>
    <string name="hook_canAddMoreProfilesToUser_title">Bypass canAddMoreProfilesToUser</string>
    <string name="hook_canAddMoreProfilesToUser_summary">Enable this to bypass profile limits (Android 11–13)</string>
    <string name="hook_canAddMoreManagedProfiles_title">Bypass canAddMoreManagedProfiles</string>
    <string name="hook_canAddMoreManagedProfiles_summary">Enable this to bypass managed profile limits (Android 6–10)</string>
    <string name="hook_isUserLimitReached_summary">Enable this to bypass user limit checks (Android 7–13)</string>
    <string name="hook_isUserLimitReached_title">Bypass isUserLimitReached</string>
    <string name="hook_isUserLimitReachedLocked_summary">Enable this to bypass user limit checks (Android 4.2–6)</string>
    <string name="hook_isUserLimitReachedLocked_title">Bypass isUserLimitReachedLocked</string>


</resources>